Add build.cmd/build.sh auto-Java wrapper + open kapt JDK access